03-custom-application/development/service/greeting/k8s/prod/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greeting-path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2


#    # Configure ModSecurity
#    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
#    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
#    nginx.ingress.kubernetes.io/modsecurity-transaction-id: "$request_id"
#    nginx.ingress.kubernetes.io/modsecurity-snippet: |
#      SecRuleEngine On

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /prod/greeting(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: greeting
                port:
                  number: 80
